tests/integration/snapshots/integration__conformance__n_string_incomplete_escape.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["\"]
stdout ---

stderr ---
error: expected closing quote
 --> stdin:1:5
  |
1 | ["\"]
  |  -  ^
  |  |
  |  opening quote found here
  |
help: insert the missing closing quote
  |
1 | ["\"]"
  |      +
