tests/integration/snapshots/integration__conformance__n_string_incomplete_escape.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
["\"]
stderr ---
error: expected closing quote
 --> stdin:1:5
  |
1 | ["\"]
  |  -  ^
  |  |
  |  opening quote found here
  |
help: insert the missing closing quote
  |
1 | ["\"]"
  |      +
