tests/integration/snapshots/integration__conformance__n_string_incomplete_surrogate.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["\uD834\uDd"]
stdout ---

stderr ---
error: expected hex digit 3 of 4 in escape, found `"`
 --> stdin:1:13
  |
1 | ["\uD834\uDd"]
  |  -      --  ^
  |  |      |
  |  |      \u escape started here
  |  opening quote found here
