tests/integration/snapshots/integration__conformance__n_string_incomplete_surrogate.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
["\uD834\uDd"]
stderr ---
error: expected hex digit 3 of 4 in escape, found `"`
 --> stdin:1:13
  |
1 | ["\uD834\uDd"]
  |  -      --  ^
  |  |      |
  |  |      \u escape started here
  |  opening quote found here
